<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Pedro</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">Desde ontem a noite o deploy automatizado no Heroku corrigiu o bug de estados estáticos nos componentes da UI. Fala pro cliente que o deploy automatizado no Heroku otimizou a renderização na interpolação dinâmica de strings. Fala pro cliente que o gerenciador de dependências do frontend superou o desempenho do nosso servidor de DNS. Desde ontem a noite o deploy automatizado no Heroku corrigiu o bug de estados estáticos nos componentes da UI. Fala pro cliente que o deploy automatizado no Heroku otimizou a renderização na interpolação dinâmica de strings. Fala pro cliente que o gerenciador de dependências do frontend superou o desempenho do nosso servidor de DNS. Desde ontem a noite o deploy automatizado no Heroku corrigiu o bug de estados estáticos nos componentes da UI. Fala pro cliente que o deploy automatizado no Heroku otimizou a renderização na interpolação dinâmica de strings. Fala pro cliente que o gerenciador de dependências do frontend superou o desempenho do nosso servidor de DNS. Desde ontem a noite o deploy automatizado no Heroku corrigiu o bug de estados estáticos nos componentes da UI. Fala pro cliente que o deploy automatizado no Heroku otimizou a renderização na interpolação dinâmica de strings. Fala pro cliente que o gerenciador de dependências do frontend superou o desempenho do nosso servidor de DNS. Desde ontem a noite o deploy automatizado no Heroku corrigiu o bug de estados estáticos nos componentes da UI. Fala pro cliente que o deploy automatizado no Heroku otimizou a renderização na interpolação dinâmica de strings. Fala pro cliente que o gerenciador de dependências do frontend superou o desempenho do nosso servidor de DNS.</string>
    <string name="me_and_car">Image of me and my car</string>
    <string name="what_is_yout_nickname">What is yout nickname?</string>
    <string name="change_name">Change Name</string>
</resources>